# cpp-snake-game

./: .gitignore  CMakeLists.txt  snake.cpp
cmake/: toolchain-linux.cmake  toolchain-windows.cmake
include/: food.hpp  game.hpp  snake.hpp
src/: food.cpp  game.cpp  main.cpp  snake.cpp
